# system-monitor

./: README.md  pyproject.toml
src/system_monitor/: __init__.py  __main__.py  main.py
src/system_monitor/components/: cpu.py  gpu.py  nvme.py  ram.py  storage.py
src/system_monitor/core/: metric.py  sensor_provider.py
src/system_monitor/ui/: table.py
