[project]
name = "system-monitor"
version = "0.1.0"
description = "Lightweight system monitoring tool for Linux"
requires-python = ">=3.10"
dependencies = [
  "rich"
]

[project.scripts]
smonitor = "system_monitor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
